# alinous-elastic-db

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  libmain.cpp
lib/src_java/: CMakeLists.txt  ConstStr.cpp  ConstStr.h  includes.h
lib/src_java/alinous.btree/: AbstractBTreeLeafContainer.cpp  AbstractBTreeLeafContainer.h  AbstractBTreeNode.cpp  AbstractBTreeNode.h  AbstractNode.cpp  AbstractNode.h  BTree.cpp  BTree.h  BTreeCacheArray.cpp  BTreeCacheArray.h  BTreeCacheRecord.cpp  BTreeCacheRecord.h  BTreeException.cpp  BTreeException.h  BTreeGlobalCache.cpp  BTreeGlobalCache.h  BTreeLeafContainer.cpp  BTreeLeafContainer.h  BTreeLeafNode.cpp  BTreeLeafNode.h  BTreeMachine.cpp  BTreeMachine.h  BTreeMaxLeafContainer.cpp  BTreeMaxLeafContainer.h  BTreeMaxNode.cpp  BTreeMaxNode.h  BTreeNode.cpp  BTreeNode.h  BTreeNodeHandler.cpp  BTreeNodeHandler.h  BTreeNodeLoader.cpp  BTreeNodeLoader.h  BTreeValues.cpp  BTreeValues.h  DoubleKey.cpp  DoubleKey.h  DoubleValue.cpp  DoubleValue.h  IBTree.cpp  IBTree.h  (+30 more)
lib/src_java/alinous.btree.scan/: AbstractNodeIterator.cpp  AbstractNodeIterator.h  BTreeScanner.cpp  BTreeScanner.h  INodeIterator.cpp  INodeIterator.h  LeafContainerIterator.cpp  LeafContainerIterator.h  MaxNodeIterator.cpp  MaxNodeIterator.h  NodeIterator.cpp  NodeIterator.h
lib/src_java/alinous.btreememory/: AbstractMemoryBTreeLeafContainer.cpp  AbstractMemoryBTreeLeafContainer.h  AbstractMemoryBTreeNode.cpp  AbstractMemoryBTreeNode.h  AbstractMemoryNode.cpp  AbstractMemoryNode.h  BTreeOnMemory.cpp  BTreeOnMemory.h  MBTreeLeafContainer.cpp  MBTreeLeafContainer.h  MBTreeLeafNode.cpp  MBTreeLeafNode.h  MBTreeMaxLeafContainer.cpp  MBTreeMaxLeafContainer.h  MBTreeMaxNode.cpp  MBTreeMaxNode.h  MBTreeNode.cpp  MBTreeNode.h  MemoryBTreeMachine.cpp  MemoryBTreeMachine.h
lib/src_java/alinous.btreememory.scan/: MemoryBTreeScanner.cpp  MemoryBTreeScanner.h  MemoryLeafContainerIterator.cpp  MemoryLeafContainerIterator.h  MemoryMaxNodeIterator.cpp  MemoryMaxNodeIterator.h  MemoryNodeIterator.cpp  MemoryNodeIterator.h
lib/src_java/alinous.buffer.storage/: FileAccessWrapper.cpp  FileAccessWrapper.h  FileStorage.cpp  FileStorage.h  FileStorageBlock.cpp  FileStorageBlock.h  FileStorageEntry.cpp  FileStorageEntry.h  FileStorageEntryBuilder.cpp  FileStorageEntryBuilder.h  (+8 more)
lib/src_lib/: CMakeLists.txt
(+2153 files in other folders)
